Bug 580261: Fix RAP compilation